flapivor/tests/m3/hopix/typechecker/bad/50-constructor-06.hopix
type T<a> = A(a)

val main : T<Int> = A<Int>("Wrong!")